--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,6 +9,8 @@ This server is work!
 <a href="MemberServlet">member</a>
 <br>
 <a href="ShopServlet">shop</a>
+<br>
+<a href="AddressServlet">address</a>
 
 </body>
 
