--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,6 +11,12 @@ This server is work!
 <a href="ShopServlet">shop</a>
 <br>
 <a href="AddressServlet">address</a>
+<br>
+<a href="CommentServlet">comment</a>
+<br>
+<a href="OrderServelet">Order</a>
+<br>
+<a href="FavoriteServlet">Favorite</a>
 
 </body>
 
