--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -14,7 +14,7 @@ This server is work!
 <br>
 <a href="CommentServlet">comment</a>
 <br>
-<a href="OrderServelet">Order</a>
+<a href="OrderServlet">Order</a>
 <br>
 <a href="FavoriteServlet">Favorite</a>
 
