add Delivery and some Shop Data.

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,6 +10,8 @@ This server is work!
 <br>
 <a href="ShopServlet">shop</a>
 <br>
+<a href="DeliveryServlet">Delivery</a>
+<br>
 <a href="AddressServlet">address</a>
 <br>
 <a href="CommentServlet">comment</a>
